boxddd-sys/third-party/box3d/include/box3d/types.h

/// This is used to filter collision on shapes. It affects shape-vs-shape collision
/// and shape-versus-query collision (such as b3World_CastRay).
/// @ingroup shape
typedef struct b3Filter
{
	/// The collision category bits. Normally you would just set one bit. The category bits should
	/// represent your application object types. For example:
	/// @code{.cpp}
	/// enum MyCategories
	/// {
	///    Static  = 0x00000001,
	///    Dynamic = 0x00000002,
	///    Debris  = 0x00000004,
	///    Player  = 0x00000008,
	///    // etc
	/// };
	/// @endcode
	uint64_t categoryBits;

	/// The collision mask bits. This states the categories that this
	/// shape would accept for collision.
	/// For example, you may want your player to only collide with static objects
	/// and other players.
	/// @code{.c}
	/// maskBits = Static | Player;
	/// @endcode
	uint64_t maskBits;

	/// Collision groups allow a certain group of objects to never collide (negative)
	/// or always collide (positive). A group index of zero has no effect. Non-zero group filtering
	/// always wins against the mask bits.
	/// For example, you may want ragdolls to collide with other ragdolls but you don't want
	/// ragdoll self-collision. In this case you would give each ragdoll a unique negative group index
	/// and apply that group index to all shapes on the ragdoll.
	int groupIndex;
} b3Filter;
/// Material properties supported per triangle on meshes and height fields
/// @ingroup shape
typedef struct b3SurfaceMaterial
{
	/// The Coulomb (dry) friction coefficient, usually in the range [0,1].
	float friction;

	/// The coefficient of restitution (bounce) usually in the range [0,1].
	/// https://en.wikipedia.org/wiki/Coefficient_of_restitution
	float restitution;

	/// The rolling resistance usually in the range [0,1]. This is only used for spheres and capsules.
	float rollingResistance;

	/// The tangent velocity for conveyor belts. This is local to the shape and will be projected
	/// onto the contact surface.
	b3Vec3 tangentVelocity;

	/// User material identifier. This is passed with query results and to friction and restitution
	/// combining functions. It is not used internally.
	uint64_t userMaterialId;

	/// Custom debug draw color. Ignored if 0. The low 24 bits are RGB. The high byte may
	/// carry a b3DebugMaterial preset, see b3MakeDebugColor.
	/// @see b3HexColor
	uint32_t customColor;

	/// Explicit padding. Must be zero.
	uint32_t padding;
} b3SurfaceMaterial;
/// Used to create a shape
/// @ingroup shape
typedef struct b3ShapeDef
{
	/// Optional shape name for debugging
	const char* name;

	/// Use this to store application specific shape data.
	void* userData;

	/// Surface material used on mesh shapes per triangle. Ignored for convex shapes. Ignored for compound shapes.
	b3SurfaceMaterial* materials;

	/// Surface material count.
	int materialCount;

	/// The base surface material. Ignored for compound shapes.
	b3SurfaceMaterial baseMaterial;

	/// The density, usually in kg/m^3.
	float density;

	/// Explosion scale for b3World_Explode. non-dimensional
	float explosionScale;

	/// Contact filtering data.
	b3Filter filter;

	/// Enable custom filtering. Only one of the two shapes needs to enable custom filtering. See b3WorldDef.
	bool enableCustomFiltering;

	/// A sensor shape generates overlap events but never generates a collision response.
	/// Sensors do not have continuous collision. Instead, use a ray or shape cast for those scenarios.
	/// Sensors still contribute to the body mass if they have non-zero density.
	/// @note Sensor events are disabled by default.
	/// @see enableSensorEvents
	bool isSensor;

	/// Enable sensor events for this shape. This applies to sensors and non-sensors. False by default, even for sensors.
	/// Only convex shapes may act as sensor visitors.
	bool enableSensorEvents;

	/// Enable contact events for this shape. Only applies to kinematic and dynamic bodies. Ignored for sensors. False by default.
	bool enableContactEvents;

	/// Enable hit events for this shape. Only applies to kinematic and dynamic bodies. Ignored for sensors. False by default.
	bool enableHitEvents;

	/// Enable pre-solve contact events for this shape. Only applies to dynamic bodies. These are expensive
	///	and must be carefully handled due to multithreading. Ignored for sensors.
	bool enablePreSolveEvents;

	/// When shapes are created they will scan the environment for collision the next time step. This can significantly slow down
	/// static body creation when there are many static shapes.
	/// This is flag is ignored for dynamic and kinematic shapes which always invoke contact creation.
	bool invokeContactCreation;

	/// Should the body update the mass properties when this shape is created. Default is true.
	/// Warning: if this is false, you MUST call b3Body_ApplyMassFromShapes or b3Body_SetMassData before simulating the world.
	bool updateBodyMass;

	/// Enable speculative collision. Leave this true unless you care about reducing ghost collision
	/// more than continuous collision under rotation.
	/// Experimental: this can only disable speculative contact between hulls and triangles (meshes and height fields).
	bool enableSpeculativeContact;

	/// Used internally to detect a valid definition. DO NOT SET.
	int internalValue;

} b3ShapeDef;
/**@}*/ // sphere

/**
 * @defgroup capsule Capsule
 * @brief Capsule primitive
 * @{
 */

/// A solid capsule can be viewed as two hemispheres connected
/// by a rectangle.
typedef struct b3Capsule
{
	/// Local center of the first hemisphere
	b3Vec3 center1;

	/// Local center of the second hemisphere
	b3Vec3 center2;

	/// The radius of the hemispheres
	float radius;
} b3Capsule;
/**@}*/ // capsule

/**
 * @defgroup hull Convex Hull
 * @brief Convex hull primitive
 * @{
 */

/// A hull vertex. Identified by a half-edge with this vertex as its tail.
typedef struct b3HullVertex
{
	/// A half-edge that has this vertex as the origin
	/// Can be used along with edge twins and winding order
	/// to traverse all the edges connected to this vertex.
	uint8_t edge;
} b3HullVertex;
/// Half-edge for hull data structure
typedef struct b3HullHalfEdge
{
	/// Next edge index CCW
	uint8_t next;

	/// Twin edge index
	uint8_t twin;

	/// index of origin vertex and point
	uint8_t origin;

	/// Face to the left of this edge
	uint8_t face;
} b3HullHalfEdge;
/// A hull face. Hulls use a half-edge data structure, so a face
/// can be determined from a single half-edge index.
typedef struct b3HullFace
{
	/// An arbitrary half-edge on this face
	uint8_t edge;
} b3HullFace;
/// 64-bit hull version. Useful for validating serialized data.
#define B3_HULL_VERSION 0x4A4C9587DE57485Cull
/// A convex hull.
/// @note This data structure has data hanging off the end and cannot be directly copied.
typedef struct b3HullData
{
	/// Version must be first and match B3_HULL_VERSION
	uint64_t version;

	/// Hash of this hull (this field is zero when the hash is computed).
	uint64_t hash;

	/// Axis-aligned box in local space.
	b3AABB aabb;

	/// Surface area, typically in squared meters.
	float surfaceArea;

	/// Volume, typically in m^3.
	float volume;

	/// The radius of the largest sphere at the center.
	float innerRadius;

	/// The local centroid
	b3Vec3 center;

	/// The inertia tensor about the centroid.
	b3Matrix3 centralInertia;

	/// The vertex count.
	int32_t vertexCount;

	/// Offset of the vertex array in bytes from the struct address.
	int32_t vertexOffset;

	/// Offset of the point array in bytes from the struct address.
	int32_t pointOffset;

	/// This is the half-edge count (double the edge count)
	int32_t edgeCount;

	/// Offset of the edge array in bytes from the struct address.
	int32_t edgeOffset;

	/// The face count. Hulls faces are convex polygons.
	int32_t faceCount;

	/// Offset of the face plane array in bytes from the struct address.
	int32_t planeOffset;

	/// Offset of the face array in bytes from the struct address.
	int32_t faceOffset;

	/// Offset of structure of array (SOA) vertices
	int32_t soaVertexOffset;

	/// Offset of structure of array (SOA) unit normal vectors
	int32_t soaNormalOffset;

	/// The total number of bytes for this hull.
	int32_t byteCount;

	/// Any padding must be explicit.
} b3HullData;
/// Efficient box hull
typedef struct b3BoxHull
{
	/// The embedded hull. So the offsets index into the arrays that follow.
	b3HullData base;
	b3HullVertex boxVertices[8]; ///< Box vertices.
	b3Vec3 boxPoints[8];		 ///< Box points.
	b3HullHalfEdge boxEdges[24]; ///< Box half-edges.
	b3Plane boxPlanes[6];		 ///< Box face planes.
	b3HullFace boxFaces[6];		 ///< Box faces.
	uint8_t padding[2];			 ///< Explicit padding.
	float vx[8];				 ///< vertex x
	float vy[8];				 ///< vertex y
	float vz[8];				 ///< vertex z
	float nx[8];				 ///< normal x, padded to multiple of 4
	float ny[8];				 ///< normal y, padded to multiple of 4
	float nz[8];				 ///< normal z, padded to multiple of 4
} b3BoxHull;
/**@}*/ // hull

/**
 * @defgroup mesh Triangle Mesh
 * @brief Triangle mesh collision shape
 * @{
 */

/// This is used to create a re-usable collision mesh. No pointers
/// are held to this data in b3MeshData. So all this data can be temporary.
typedef struct b3MeshDef
{
	/// Triangle vertices.
	b3Vec3* vertices;

	/// Triangle vertex indices. 3 for each triangle. CCW winding.
	int32_t* indices;

	/// Triangle material index. 1 per triangle. Indexes into b3ShapeDef::materials.
	/// This allows different run-time material data to be associated with different
	/// instances of this mesh.
	uint8_t* materialIndices;

	/// Tolerance for vertex welding in length units.
	float weldTolerance;

	/// The vertex count. Must be 3 or more.
	int vertexCount;

	/// The triangle count. Must be 1 or more.
	int triangleCount;

	/// Optionally weld nearby vertices.
	bool weldVertices;

	/// Use the median split instead of SAH to speed up mesh creation. Good
	/// for meshes that are structured like a grid.
	bool useMedianSplit;

	/// Compute triangle adjacency information using shared edges
	bool identifyEdges;
} b3MeshDef;
/// Triangle mesh edge flags.
typedef enum b3MeshEdgeFlags
{
	b3_concaveEdge1 = 0x01,
	b3_concaveEdge2 = 0x02,
	b3_concaveEdge3 = 0x04,

	b3_inverseConcaveEdge1 = 0x10,
	b3_inverseConcaveEdge2 = 0x20,
	b3_inverseConcaveEdge3 = 0x40,

	b3_allConcaveEdges = b3_concaveEdge1 | b3_concaveEdge2 | b3_concaveEdge3,

	b3_flatEdge1 = b3_concaveEdge1 | b3_inverseConcaveEdge1,
	b3_flatEdge2 = b3_concaveEdge2 | b3_inverseConcaveEdge2,
	b3_flatEdge3 = b3_concaveEdge3 | b3_inverseConcaveEdge3,

	b3_allFlatEdges = b3_flatEdge1 | b3_flatEdge2 | b3_flatEdge3,

} b3MeshEdgeFlags;
/// A mesh triangle.
typedef struct b3MeshTriangle
{
	int32_t index1; ///< Index of vertex 1.
	int32_t index2; ///< Index of vertex 2.
	int32_t index3; ///< Index of vertex 3.
} b3MeshTriangle;
/// A mesh BVH node.
typedef struct b3MeshNode
{
	/// The lower bound of the node AABB. Strategic placement for SIMD.
	b3Vec3 lowerBound;

	/// Anonymous union.
	union
	{
		/// Internal node
		struct
		{
			/// Split axis. 0, 1, or 2.
			uint32_t axis : 2;
			/// Offset of the second child node.
			uint32_t childOffset : 30;
		} asNode;

		/// Leaf node
		struct
		{
			/// Aligned with axis above and has value of 3 if this is a leaf.
			uint32_t type : 2;

			/// The number of triangles for this leaf node.
			uint32_t triangleCount : 30;
		} asLeaf;
	} data;

	/// The upper bound of the node AABB.  Strategic placement for SIMD.
	b3Vec3 upperBound;

	/// The index of the leaf triangles.
	uint32_t triangleOffset;
} b3MeshNode;