boxddd-sys/src/bindings_pregenerated.rs

/** A solid capsule can be viewed as two hemispheres connected
 by a rectangle.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Capsule {
    /// Local center of the first hemisphere
    pub center1: b3Vec3,
    /// Local center of the second hemisphere
    pub center2: b3Vec3,
    /// The radius of the hemispheres
    pub radius: f32,
}
/// A hull vertex. Identified by a half-edge with this vertex as its tail.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HullVertex {
    /** A half-edge that has this vertex as the origin
 Can be used along with edge twins and winding order
 to traverse all the edges connected to this vertex.*/
    pub edge: u8,
}
/// Half-edge for hull data structure
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HullHalfEdge {
    /// Next edge index CCW
    pub next: u8,
    /// Twin edge index
    pub twin: u8,
    /// index of origin vertex and point
    pub origin: u8,
    /// Face to the left of this edge
    pub face: u8,
}
/** A hull face. Hulls use a half-edge data structure, so a face
 can be determined from a single half-edge index.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HullFace {
    /// An arbitrary half-edge on this face
    pub edge: u8,
}
/** A convex hull.
 @note This data structure has data hanging off the end and cannot be directly copied.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HullData {
    /// Version must be first and match B3_HULL_VERSION
    pub version: u64,
    /// The total number of bytes for this hull.
    pub byteCount: ::std::os::raw::c_int,
    /// Hash of this hull (this field is zero when the hash is computed).
    pub hash: u32,
    /// Axis-aligned box in local space.
    pub aabb: b3AABB,
    /// Surface area, typically in squared meters.
    pub surfaceArea: f32,
    /// Volume, typically in m^3.
    pub volume: f32,
    /// The radius of the largest sphere at the center.
    pub innerRadius: f32,
    /// The local centroid
    pub center: b3Vec3,
    /// The inertia tensor about the centroid.
    pub centralInertia: b3Matrix3,
    /// The vertex count.
    pub vertexCount: ::std::os::raw::c_int,
    /// Offset of the vertex array in bytes from the struct address.
    pub vertexOffset: ::std::os::raw::c_int,
    /// Offset of the point array in bytes from the struct address.
    pub pointOffset: ::std::os::raw::c_int,
    /// This is the half-edge count (double the edge count)
    pub edgeCount: ::std::os::raw::c_int,
    /// Offset of the edge array in bytes from the struct address.
    pub edgeOffset: ::std::os::raw::c_int,
    /// The face count. Hulls faces are convex polygons.
    pub faceCount: ::std::os::raw::c_int,
    /// Offset of the face plane array in bytes from the struct address.
    pub planeOffset: ::std::os::raw::c_int,
    /// Offset of the face array in bytes from the struct address.
    pub faceOffset: ::std::os::raw::c_int,
    /// Offset of structure of array (SOA) vertices
    pub soaVertexOffset: ::std::os::raw::c_int,
    /// Offset of structure of array (SOA) unit normal vectors
    pub soaNormalOffset: ::std::os::raw::c_int,
    /** Explicit padding. Hull identity is a content hash and memcmp over raw bytes,
 so there must be no unnamed padding for struct copies to scramble.*/
    pub padding: ::std::os::raw::c_int,
}
/// Efficient box hull
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BoxHull {
    /// The embedded hull. So the offsets index into the arrays that follow.
    pub base: b3HullData,
    ///< Box vertices.
    pub boxVertices: [b3HullVertex; 8usize],
    ///< Box points.
    pub boxPoints: [b3Vec3; 8usize],
    ///< Box half-edges.
    pub boxEdges: [b3HullHalfEdge; 24usize],
    ///< Box face planes.
    pub boxPlanes: [b3Plane; 6usize],
    ///< Box faces.
    pub boxFaces: [b3HullFace; 6usize],
    ///< Explicit padding, see b3HullData::padding.
    pub padding: [u8; 10usize],
    ///< vertex x
    pub vx: [f32; 8usize],
    ///< vertex y
    pub vy: [f32; 8usize],
    ///< vertex z
    pub vz: [f32; 8usize],
    ///< normal x, padded to multiple of 4
    pub nx: [f32; 8usize],
    ///< normal y, padded to multiple of 4
    pub ny: [f32; 8usize],
    ///< normal z, padded to multiple of 4
    pub nz: [f32; 8usize],
}
/// This is used to create a re-usable collision mesh.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MeshDef {
    /// Triangle vertices
    pub vertices: *mut b3Vec3,
    /// Triangle vertex indices. 3 for each triangle. CCW winding.
    pub indices: *mut i32,
    /** Triangle material index. 1 per triangle. Indexes into b3ShapeDef::materials.
 This allows different run-time material data to be associated with different
 instances of this mesh.*/
    pub materialIndices: *mut u8,
    /// Tolerance for vertex welding in length units.
    pub weldTolerance: f32,
    /// The vertex count. Must be 3 or more.
    pub vertexCount: ::std::os::raw::c_int,
    /// The triangle count. Must be 1 or more.
    pub triangleCount: ::std::os::raw::c_int,
    /// Optionally weld nearby vertices.
    pub weldVertices: bool,
    /** Use the median split instead of SAH to speed up mesh creation. Good
 for meshes that are structured like a grid.*/
    pub useMedianSplit: bool,
    /// Compute triangle adjacency information using shared edges
    pub identifyEdges: bool,
}
pub const b3MeshEdgeFlags_b3_concaveEdge1: b3MeshEdgeFlags = 1;
pub const b3MeshEdgeFlags_b3_concaveEdge2: b3MeshEdgeFlags = 2;
pub const b3MeshEdgeFlags_b3_concaveEdge3: b3MeshEdgeFlags = 4;
pub const b3MeshEdgeFlags_b3_inverseConcaveEdge1: b3MeshEdgeFlags = 16;
pub const b3MeshEdgeFlags_b3_inverseConcaveEdge2: b3MeshEdgeFlags = 32;
pub const b3MeshEdgeFlags_b3_inverseConcaveEdge3: b3MeshEdgeFlags = 64;
pub const b3MeshEdgeFlags_b3_allConcaveEdges: b3MeshEdgeFlags = 7;
pub const b3MeshEdgeFlags_b3_flatEdge1: b3MeshEdgeFlags = 17;
pub const b3MeshEdgeFlags_b3_flatEdge2: b3MeshEdgeFlags = 34;
pub const b3MeshEdgeFlags_b3_flatEdge3: b3MeshEdgeFlags = 68;
pub const b3MeshEdgeFlags_b3_allFlatEdges: b3MeshEdgeFlags = 119;
/// Triangle mesh edge flags.
pub type b3MeshEdgeFlags = ::std::os::raw::c_uint;
/// A mesh triangle.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MeshTriangle {
    ///< Index of vertex 1.
    pub index1: i32,
    ///< Index of vertex 2.
    pub index2: i32,
    ///< Index of vertex 3.
    pub index3: i32,
}
/// A mesh BVH node.
#[repr(C)]
#[derive(Copy, Clone)]
pub struct b3MeshNode {
    /// The lower bound of the node AABB. Strategic placement for SIMD.
    pub lowerBound: b3Vec3,
    pub data: b3MeshNode__bindgen_ty_1,
    /// The upper bound of the node AABB.  Strategic placement for SIMD.
    pub upperBound: b3Vec3,
    /// The index of the leaf triangles.
    pub triangleOffset: u32,
}
/// Anonymous union.
#[repr(C)]
#[derive(Copy, Clone)]
pub union b3MeshNode__bindgen_ty_1 {
    pub asNode: b3MeshNode__bindgen_ty_1__bindgen_ty_1,
    pub asLeaf: b3MeshNode__bindgen_ty_1__bindgen_ty_2,
}
/// Internal node
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MeshNode__bindgen_ty_1__bindgen_ty_1 {
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize]>,
}
impl b3MeshNode__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn axis(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 2u8) as u32) }
    }
    #[inline]
    pub fn set_axis(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 2u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn axis_raw(this: *const Self) -> u32 {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 0usize, 2u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_axis_raw(this: *mut Self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                2u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn childOffset(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 30u8) as u32) }
    }
    #[inline]
    pub fn set_childOffset(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 30u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn childOffset_raw(this: *const Self) -> u32 {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 2usize, 30u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_childOffset_raw(this: *mut Self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                2usize,
                30u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        axis: u32,
        childOffset: u32,
    ) -> __BindgenBitfieldUnit<[u8; 4usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize]> = Default::default();
        __bindgen_bitfield_unit
            .set(
                0usize,
                2u8,
                {
                    let axis: u32 = unsafe { ::std::mem::transmute(axis) };
                    axis as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                2usize,
                30u8,
                {
                    let childOffset: u32 = unsafe { ::std::mem::transmute(childOffset) };
                    childOffset as u64
                },
            );
        __bindgen_bitfield_unit
    }
}
/// Leaf node
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MeshNode__bindgen_ty_1__bindgen_ty_2 {
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize]>,
}
